# embed-file-c-cpp-demo

./: .gitignore  README.md  example_string.txt
00_c23_embed/: main_c32_embed.c
01_include_raw_string/: .gitignore  Makefile  main_include_raw_string.cpp
02_objcopy/: Makefile  main_objcopy.c
03_xxd_1/: Makefile  main_xxd.c
04_xxd_2/: .gitignore  Makefile  main_xxd.c
05_asm/: main_asm.c
06_qt_resource/: CMakeLists.txt  main_qrc.cpp  resources.qrc
